k8s/deploy/vms/storage.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: storage
  namespace: truenas-storage
  labels:
    app.kubernetes.io/name: storage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: storage.internal.eevans.me.
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
    - name: nfsv4
      port: 2049
      protocol: TCP
      targetPort: nfsv4
  selector:
    app.kubernetes.io/name: storage
    eevans.me/type: vm
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: storage-internal
  namespace: truenas-storage
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: storage
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "2049"
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "2049"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "443"
